# mosig-s2

acs/presentation/: notes.txt
acs/presentation/slide/: main.tex
crypto/lab/3/report/: main.tex
ids/presentation/: Untitledids_poster_googleMonitoring_v9999999.odt  ids_poster_googleMonitoring.odt  ids_presentation_googleMonitoring.odt
inteligentSystem/homework/8/report/: lab8.clp
internship/OS/doc/: topic_memory_allocator
internship/OS/poster/: TODO  comments_on_poster_v1.txt  comments_on_poster_v2.txt
internship/OS/presentation/: TODO  comments-dady  comments-marie  comments-thomasRopars  speechNotes-marie
internship/OS/report/: 06-15-2016.doc  notesThomasRopars
internship/OS/result/: 05-24-2016.tar  05-25-2016.tar  05-26-2016.tar  05-31-2016.tar  06-11-2016.tar  06-12-2016.tar  06-14-2016.tar  06-15-2016_10h.tar  06-15-2016_12h.tar  06-15-2016_13h.tar  commentResult.txt
internship/usharesoft/docAdministration/: info
internship/usharesoft/docTechnic/: generalNotes  labObjective  todo  transferedFiles_ftp_http.ods
internship/usharesoft/labFiles/: setPxeServer.sh  unsetPxeServer.sh
internship/usharesoft/talk/: speech
network/lab/2/ipmt-0.99.1/: LISEZ_MOI  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  common.c  config.h  config.h.in  config.status  configure  configure.ac  display.R  ipmt.h  source.txt  target.c  target.h  tcpcommon.c  tcpcommon.h  tcpmt  tcpmt.1  tcpmt.c  tcptarget  tcptarget.1  tcptarget.c  test-file.txt  test-grammar.c  test-grammar.h  test-grammar.y  test-parser.c  test-parser.l  testfile.c  testfile.h  udpmt  udpmt.1  udpmt.c  udptarget  udptarget.1  udptarget.c
network/lab/2/ipmt-0.99.1/.deps/: common.Po  target.Po  tcpcommon.Po  tcpmt.Po  tcptarget.Po  test-grammar.Po  test-parser.Po  testfile.Po  udpmt.Po  udptarget.Po
network/lab/2/ipmt-0.99.1/Tests/: common.sh  test-tcp-bidir.sh  test-tcp-passive.sh  test-tcp-tf.sh  test-tcp.sh  test-udp.sh
operationsResearch/homeWork/: pass ulysse
operationsResearch/homeWork/week1/: dairy.mod  parfumes.mod  winesQ1.mod  winesQ2.mod
operationsResearch/homeWork/week2/: dual.mod
operationsResearch/homeWork/week3/: binpack.mod  cars.mod  coals.mod  toys.mod  wipers.mod  wipers2.mod
operationsResearch/lecture/: fiche  notes-Duality  notes-LinearProgramming  notes-ModellingTechnics
projectSystem/report/report/: NachOS.pptx
robotics/lab/lab2/: DataReader.cpp  DataReader.hpp  DetectionObject  DetectionObject.cpp  TrackingObject
(+125 files in other folders)
